--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     <div class="container" id="main">
         <div class="row mt-4">
             <h2 class="col-md-12 text-center">
-                <b><font size="+5">Explore until Confident</font></b>: </br> Efficient Exploration for Embodied Question Answering </br> 
+                <b><font size="+5">Explore until Confident</font></b>: </br> Efficient Exploration for Embodied Question Answering </br>
             </h2>
         </div>
 
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-                <br>
+                <!-- <br> -->
                 <li><a href="//allenzren.github.io">Allen Z. Ren</a></li>
                 <li><a href="//jadenvc.github.io">Jaden Clark</a></li>
                 <li><a href="//www.anushridixit.com">Anushri Dixit</a></li>
@@ -75,7 +75,12 @@
                     </a>
                     &nbsp&nbsp&nbsp
                     <a href="https://www.stanford.edu/">
-                        <image src="img/stanford.png" height="50px"> 
+                        <image src="img/stanford.png" height="55px"> 
+                        <!-- Stanford University -->
+                    </a>
+                    &nbsp&nbsp&nbsp
+                    <a href="https://www.tri.global/">
+                        <image src="img/toyota-research-institute.png" height="50px"> 
                         <!-- Stanford University -->
                     </a>
                 </ul>
@@ -159,9 +164,9 @@
                     In EQA tasks, the robot starts at a random location in a 3D scene, explores the space,
                     and stops when it is confident about answering the question. This can be a challenging problem due to highly diverse scenes and lack of an a-priori map of the environment. Previous works rely on training dedicated exploration policies and question answering modules from scratch, which often only consider simple and syntactically structured questions such as “what is the color of the sofa”. The models studied in prior work largely consider synthetic scenes, and can be data-inefficient since the training is done from scratch.
                     <br><p style="text-align:center;">
-                        <image src="img/trial.png" width="100%">
+                        <image src="img/trial.png" width="80%">
                     </p><br>
-                    We are interested in using pre-trained large <strong>vision-language model (VLM)</strong> for EQA without additional training. They have achieved impressive performance in answering complex questions about static 2D images that sometimes requires reasoning. They can also help the robot actively perceive the 3D scene given partial 2D views and reason about future actions for the robot to take [8]. Such capabilities are critical to performing EQA, as the robot can now better reason about relevant regions of the environment, actively explore them, and answer questions that require semantic reasoning (e.g., answering “what time is it now?” by searching for a clock).
+                    We are interested in using pre-trained large <strong>vision-language model (VLM)</strong> for EQA without additional training. They have achieved impressive performance in answering complex questions about static 2D images that sometimes requires reasoning. They can also help the robot actively perceive the 3D scene given partial 2D views and reason about future actions for the robot to take [8]. Such capabilities are critical to performing EQA, as the robot can now better reason about relevant regions of the environment, actively explore them, and answer questions that require semantic reasoning (e.g., answering "what time is it now?" by searching for a clock).
             </div>
         </div>
 
@@ -172,24 +177,31 @@
                     Challenges of using VLMs in EQA
                 </h3>
                 <p class="text-justify">
-                    However, there are two main challenges that arise in using VLMs for EQA in complex, diverse 3D scenes while trying to explore efficiently:<br> 
-                    1) Limited Internal Memory of VLMs. Efficient exploration benefits from the robot tracking previously explored regions and also ones yet to be explored but relevant for answering the question. However, VLMs do not have an internal memory for mapping the scene and storing such semantic information;<br>
-                    2) Miscalibrated VLMs. VLMs are fine-tuned on pre-trained large language models (LLMs) as the language decoder, and LLMs have been shown to often be miscalibrated - that is they can be over-confident or under-confident about the output. This makes it difficult to determine when the robot is confident enough about question answering in EQA and then stop exploration, affecting overall efficiency.
+                    <!-- However, there are two main challenges that arise in using VLMs for EQA in complex, diverse 3D scenes while trying to explore efficiently:<br>  -->
+                    <strong>1) Limited Internal Memory of VLMs.</strong> Efficient exploration benefits from the robot tracking previously explored regions and also ones yet to be explored but relevant for answering the question. However, VLMs do not have an internal memory for mapping the scene and storing such semantic information;<br>
+                    <strong>2) Miscalibrated VLMs.</strong> VLMs are fine-tuned on pre-trained large language models (LLMs) as the language decoder, and LLMs have been shown to often be miscalibrated - that is they can be over-confident or under-confident about the output. This makes it difficult to determine when the robot is confident enough about question answering in EQA and then stop exploration, affecting overall efficiency.
             </div>
         </div>
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <h3>
-                    Approach
+                    How can we endow VLMs - with limited memory and potential for miscalibration - with the capability of efficient exploration for EQA?
                 </h3>
                 <p class="text-justify">
-                    KnowNo builds upon <a href="https://en.wikipedia.org/wiki/Conformal_prediction">conformal prediction</a> (CP) to formally quantify the LLM uncertainty and achieve uncertainty alignment. KnowNo first constructs a calibration dataset that covers diverse scenarios that the robot encounters. For each scenario, KnowNo prompts LLM to generate plausible options and then ask it to choose one --- similar to a Multiple Choice Question Answering (MCQA) setup. KnowNo obtains the likelihood of the LLM predicting the five choices: A, B, C, D, E. Then calibration is done using the likelihood of the true options of the calibration data, and the result is a likelihood threshold. At test time given a new scenario, the prediction set includes options with likelihood above the threshold. CP provides statistical guarantee that the true option is included in the prediction set with probability of a user-specified level. In addition, CP affords the benefit of producing smallest average prediction set size with theoretical guarantees.
-                <br><br><p style="text-align:center;">
+                    Addressing the first challenge of limited internal memory, we propose building a map of the scene external to the VLM as the robot visits different locations. On top of it, we embed the VLM's knowledge about possible exploration directions into this <strong>semantic map</strong> to guide the robot's exploration. Such semantic information is obtained by <strong>visual prompting</strong>: annotating the free space in the current image view, prompting the VLM to choose among the unoccupied regions, and querying its prediction. 
+                <!-- <br><br><p style="text-align:center;">
                     <image src="img/mcqa-cp.png" width="100%">
-                </p><br>
-                KnowNo employs a simple setup for human intervention --- if the prediction set at a scenario is not a singleton (i.e., includes more than one option), KnowNo deems the robot uncertain about the correct action and triggers human help. With human truthfully providing help, KnowNo converts the coverage guarantee from CP to <strong>task completion guarantee</strong>. As CP provides small prediction sets, the human help is minimal. These two properties achieve the goal of calibrated confidence and minimal help.
-                <br>
+                </p><br> -->
+                <div class="row mt-4">
+                    <div class="col-md-12 text-center">
+                        <video id="v0" width="70%" preload="metadata" playsinline muted loop autoplay>
+                            <source src="videos/visual-prompting-hb.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                Heuristic planning is then applied to prioritize the robot exploring semantically relevant regions.
+                <!-- <br>
                 <div class="row mt-4">
                     <div class="col-md-12 text-center">
                         <video id="v0" width="100%" preload="metadata" playsinline muted loop autoplay>
@@ -197,12 +209,12 @@
                         </video>
                     </div>
                 </div>
-                <br>
+                <br> -->
             </div>
         </div>
 
         <div class="row justify-content-md-center mt-4">
-            <div class="col-md-12 col-lg-10">
+            <div class="col-md-10 col-lg-8">
                 <h3>Experiment Videos</h3>
                 <div class="card mb-4 mt-4 text-dark bg-light">
                     <h5 class="card-header">Real Scenarios (<a href="prompts/mobile_tasks.txt">full list of tasks with objects involved</a>)</h5>
@@ -428,7 +440,7 @@
                 </h3>
                 <a href="https://arxiv.org/abs/2307.01928">[arxiv version]</a>
                 <div class="form-group col-md-12">
-                    <textarea id="bibtex" class="form-control" rows="8" readonly>
+                    <textarea id="bibtex" class="form-control" rows="5" readonly>
 @inproceedings{exploreeqa2024,
     title={Explore until Confident: Efficient Exploration for Embodied Question Answering},
     author={Ren, Allen Z. and Clark, Jaden and Dixit, Anushri and Itkina, Masha and Majumdar, Anirudha and Sadigh, Dorsa},
