--- a/index.html
+++ b/index.html
@@ -161,35 +161,23 @@
                     Embodied Question Answering (EQA)
                 </h3>
                 <p class="text-justify">
-                    In EQA tasks, the robot starts at a random location in a 3D scene, explores the space,
-                    and stops when it is confident about answering the question. This can be a challenging problem due to highly diverse scenes and lack of an a-priori map of the environment. Previous works rely on training dedicated exploration policies and question answering modules from scratch, which often only consider simple and syntactically structured questions such as “what is the color of the sofa”. The models studied in prior work largely consider synthetic scenes, and can be data-inefficient since the training is done from scratch.
+                    In EQA tasks, the robot starts at a random location in a 3D scene, explores the space,and stops when it is confident about answering the question. This can be a challenging problem due to highly diverse scenes and lack of an a-priori map of the environment. Previous works rely on training dedicated exploration policies and question answering modules from scratch, which can be data-inefficient and only handle simple questions.
                     <br><p style="text-align:center;">
                         <image src="img/trial.png" width="80%">
                     </p><br>
-                    We are interested in using pre-trained large <strong>vision-language model (VLM)</strong> for EQA without additional training. They have achieved impressive performance in answering complex questions about static 2D images that sometimes requires reasoning. They can also help the robot actively perceive the 3D scene given partial 2D views and reason about future actions for the robot to take [8]. Such capabilities are critical to performing EQA, as the robot can now better reason about relevant regions of the environment, actively explore them, and answer questions that require semantic reasoning (e.g., answering "what time is it now?" by searching for a clock).
-            </div>
-        </div>
-
-        <div class="row justify-content-md-center">
-            <div class="col-md-12 col-lg-10">
-                <br>
-                <h3>
-                    Challenges of using VLMs in EQA
-                </h3>
-                <p class="text-justify">
-                    <!-- However, there are two main challenges that arise in using VLMs for EQA in complex, diverse 3D scenes while trying to explore efficiently:<br>  -->
+                    We are interested in using pre-trained large <strong>vision-language model (VLM)</strong> for EQA without additional training. VLMs have achieved impressive performance in answering complex questions about static 2D images that sometimes requires reasoning, and we find VLMs can also reason about semantically relevant regions to explore given the question and view. However, there are still two main challenges:<br>
                     <strong>1) Limited Internal Memory of VLMs.</strong> Efficient exploration benefits from the robot tracking previously explored regions and also ones yet to be explored but relevant for answering the question. However, VLMs do not have an internal memory for mapping the scene and storing such semantic information;<br>
-                    <strong>2) Miscalibrated VLMs.</strong> VLMs are fine-tuned on pre-trained large language models (LLMs) as the language decoder, and LLMs have been shown to often be miscalibrated - that is they can be over-confident or under-confident about the output. This makes it difficult to determine when the robot is confident enough about question answering in EQA and then stop exploration, affecting overall efficiency.
+                    <strong>2) Miscalibrated VLMs.</strong> VLMs are fine-tuned on pre-trained large language models (LLMs) as the language decoder, and LLMs are often miscalibrated - that is they can be over-confident or under-confident about the output. This makes it difficult to determine when the robot is confident enough about question answering in EQA and then stop exploration.
             </div>
         </div>
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <h3>
-                    How can we endow VLMs - with limited memory and potential for miscalibration - with the capability of efficient exploration for EQA?
+                    How can we endow VLMs with the capability of efficient exploration for EQA?
                 </h3>
                 <p class="text-justify">
-                    Addressing the first challenge of limited internal memory, we propose building a map of the scene external to the VLM as the robot visits different locations. On top of it, we embed the VLM's knowledge about possible exploration directions into this <strong>semantic map</strong> to guide the robot's exploration. Such semantic information is obtained by <strong>visual prompting</strong>: annotating the free space in the current image view, prompting the VLM to choose among the unoccupied regions, and querying its prediction. 
+                    Addressing the first challenge of limited internal memory, we propose building a map of the scene external to the VLM as the robot visits different locations. On top of it, we embed the VLM's knowledge about possible exploration directions into this <strong>semantic map</strong> to guide the robot's exploration. Such semantic information is obtained by <strong>visual prompting</strong>: annotating the free space in the current image view, prompting the VLM to choose among the unoccupied regions, and querying its prediction. The values are then stored in the semantic map.
                 <!-- <br><br><p style="text-align:center;">
                     <image src="img/mcqa-cp.png" width="100%">
                 </p><br> -->
@@ -200,7 +188,7 @@
                         </video>
                     </div>
                 </div>
-                Heuristic planning is then applied to prioritize the robot exploring semantically relevant regions.
+                We then leverage such semantic information with Frontier-Based Exploration (FBE). Frontiers are the locations between explored and unexplored regions, and we apply weighted sampling of the frontiers based on their semantic values on the map.
                 <!-- <br>
                 <div class="row mt-4">
                     <div class="col-md-12 text-center">
@@ -210,6 +198,8 @@
                     </div>
                 </div>
                 <br> -->
+                <br>
+                Addressing the second issue of miscalibration, 
             </div>
         </div>
 
