--- a/index.html
+++ b/index.html
@@ -118,10 +118,22 @@
             </div>
         </div>
 
-        <div class="row mt-4">
+        <!-- <div class="row mt-4">
             <div class="col-md-12 text-center">
                 <video id="v0" width="70%" preload="metadata" playsinline muted loop autoplay>
                     <source src="videos/knowno-microwave-score-handbrake.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div> -->
+        <div class="row mt-4">
+            <div class="col-md-6 text-center">
+                <video id="v0" width="100%" preload="metadata" playsinline muted loop autoplay>
+                    <source src="videos/visual-prompting-hb.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="col-md-6 text-center">
+                <video id="v1" width="100%" preload="metadata" playsinline muted loop autoplay>
+                    <source src="videos/cp-hb.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
