--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </video>
             </div>
         </div> -->
-        <div class="row mt-4">
+        <!-- <div class="row mt-4">
             <div class="col-md-6 text-center">
                 <video id="v0" width="100%" preload="metadata" playsinline muted loop autoplay>
                     <source src="videos/visual-prompting-hb.mp4" type="video/mp4">
@@ -136,8 +136,20 @@
                     <source src="videos/cp-hb.mp4" type="video/mp4">
                 </video>
             </div>
+        </div> -->
+        <div class="row mt-4">
+            <div class="col-md-6 text-center">
+                <video id="v0" width="100%" preload="metadata" playsinline muted loop autoplay>
+                    <source src="videos/sim-hb.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="col-md-6 text-center">
+                <video id="v1" width="100%" preload="metadata" playsinline muted loop autoplay>
+                    <source src="videos/real-hb.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
-
+        
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
                 <h3 class="mt-4 mb-2">
