--- a/index.html
+++ b/index.html
@@ -255,28 +255,27 @@
                     <div class="card-body">
 
                         <p>Choose a scenario:</p>
-                        <select class="form-select" size="8" aria-label="size 5 select example">
+                        <select class="form-select" size="7" aria-label="size 5 select example">
                             <option value="sim_1">
-                                1) Which rug did I put next to the kitchen sink? A) There is no rug B) White one C) Gray one D) Green one
+                                1) Which rug did I put next to the kitchen sink?
                             </option>
                             <option value="sim_2">
                                 2) How many bedside tables are there in the bedroom with the white bedding?
-                                A) Three B) None C) One D) Two
                             </option>
                             <option value="sim_3">
-                                3) Put the apple in the drawer.
+                                3) I am going to shower now. I need to grab some towels.
                             </option>
                             <option value="sim_4">
-                                4) Put the rice chips in the top drawer.
+                                4) Is the lamp next to the sofa turned on or off?
                             </option>
                             <option value="sim_5">
-                                5) Put the chips in the drawer.
+                                5) I remember leaving some books in one of the rooms, on wooden shelves.
                             </option>
                             <option value="sim_6">
-                                6) Put the soda in the drawer.
+                                6) Where did I leave the striped towel?
                             </option>
                             <option value="sim_7">
-                                7) Put the apple near the bottle.
+                                7) Is my kid on the treadmill?
                             </option>
                         </select>
 
@@ -322,15 +321,15 @@
                     <div class="card-body">
 
                         <p>User instruction: Sort the items that human likes in the blue plate, and ones human dislikes in the green plate.<br>Items involved in each trial:</p>
-                        <select class="form-select" size="8" aria-label="size 5 select example">
+                        <select class="form-select" size="3" aria-label="size 5 select example">
                             <option value="real_1">
-                                1) sunny-side-up egg, lettuce, mustard
+                                1) What kind of stools are under the white board?
                             </option>
                             <option value="real_2">
-                                2) mango, peanut butter, carrot
+                                2) Is there something here that I can cook my cookie dough in?
                             </option>
                             <option value="real_3">
-                                3) orange, pretzel, peach
+                                3) Is the dishwasher in the kitchen open or closed?
                             </option>
                         </select>
 
@@ -364,7 +363,7 @@
                 </h3>
                 <a href="https://arxiv.org/abs/2307.01928">[arxiv version]</a>
                 <div class="form-group col-md-12">
-                    <textarea id="bibtex" class="form-control" rows="5" readonly>
+                    <textarea id="bibtex" class="form-control" rows="6" readonly>
 @inproceedings{exploreeqa2024,
     title={Explore until Confident: Efficient Exploration for Embodied Question Answering},
     author={Ren, Allen Z. and Clark, Jaden and Dixit, Anushri and Itkina, Masha and Majumdar, Anirudha and Sadigh, Dorsa},
