--- a/index.html
+++ b/index.html
@@ -85,17 +85,6 @@
                 <h4>CoRL 2023, Best Student Paper</h4>
             </div> -->
         </div>
-
-        <style>
-            .row.justify-content-md-center {
-                margin-top: 0; /* Adjust as needed */
-                margin-bottom: 0; /* Adjust as needed */
-            }
-            .col-md-2.text-center {
-                margin-top: 0; /* Adjust as needed */
-                margin-bottom: 0; /* Adjust as needed */
-            }
-        </style>
         
         <div class="row justify-content-md-center">
             <div class="col-md-2 text-center">
@@ -208,6 +197,7 @@
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
+                <br>
                 <h3>
                     How can we endow VLMs with the capability of efficient exploration for EQA?
                 </h3>
@@ -254,7 +244,7 @@
                     <h5 class="card-header">Simulated Scenarios in Habitat-Sim</h5>
                     <div class="card-body">
 
-                        <p>Choose a scenario:</p>
+                        <p>Bottom left shows the semantic map.</p>
                         <select class="form-select" size="7" aria-label="size 5 select example">
                             <option value="sim_1">
                                 1) Which rug did I put next to the kitchen sink?
@@ -320,7 +310,7 @@
                     <h5 class="card-header">Real Scenarios with Fetch Robot</h5>
                     <div class="card-body">
 
-                        <p>User instruction: Sort the items that human likes in the blue plate, and ones human dislikes in the green plate.<br>Items involved in each trial:</p>
+                        <p>Bottom left shows the robot camera view and the topdown map.</p>
                         <select class="form-select" size="3" aria-label="size 5 select example">
                             <option value="real_1">
                                 1) What kind of stools are under the white board?
