--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                 </a>
             </div>
             <div class="col-md-2 text-center">
-                <a href="https://github.com/">
+                <a href="https://github.com/Stanford-ILIAD/active-eqa">
                     <img src="img/github.png" height="45px">
                     <h4><strong>Code</strong></h4>
                 </a>
             </div>
             <div class="col-md-2 text-center">
-                <a href="https://github.com/">
-                    <img src="img/github.png" height="45px">
+                <a href="https://github.com/Stanford-ILIAD/active-eqa/tree/master/data">
+                    <img src="img/dataset.png" height="45px">
                     <h4><strong>Dataset</strong></h4>
                 </a>
             </div>
@@ -184,7 +184,7 @@
                     Embodied Question Answering (EQA)
                 </h3>
                 <p class="text-justify">
-                    In EQA tasks, the robot starts at a random location in a 3D scene, explores the space,and stops when it is confident about answering the question. This can be a challenging problem due to highly diverse scenes and lack of an a-priori map of the environment. Previous works rely on training dedicated exploration policies and question answering modules from scratch, which can be data-inefficient and only handle simple questions.
+                    In EQA tasks, the robot starts at a random location in a 3D scene, explores the space, and stops when it is confident about answering the question. This can be a challenging problem due to highly diverse scenes and lack of an a-priori map of the environment. Previous works rely on training dedicated exploration policies and question answering modules from scratch, which can be data-inefficient and only handle simple questions.
                     <br><p style="text-align:center;">
                         <image src="img/trial.png" width="60%">
                     </p>
@@ -256,7 +256,7 @@
                                 3) I am going to shower now. I need to grab some towels.
                             </option>
                             <option value="sim_4">
-                                4) Is the lamp next to the sofa turned on or off?
+                                4) Is the lamp next to the sofa turned on?
                             </option>
                             <option value="sim_5">
                                 5) I remember leaving some books in one of the rooms, on wooden shelves.
@@ -369,7 +369,7 @@
                     Acknowledgements
                 </h3>
                 <p class="text-justify">
-                    This work was partially supported by the NSF CAREER Award [\#2044149] and the Office of Naval Research [N00014-23-1-2148]. The website template is from <a href="https://robot-help.github.io/">KnowNo</a>.
+                    We thank the contractors at TRI for helping post-processing the HM-EQA dataset. The authors were partially supported by the Toyota Research Institute (TRI), the NSF CAREER Award [#2044149], and the Office of Naval Research [N00014-23-1-2148]. This article solely reflects the opinions and conclusions of its authors and NSF, ONR, TRI or any other Toyota entity. The website template is from <a href="https://robot-help.github.io/">KnowNo</a>.
                 </p>
             </div>
         </div>
