--- a/index.html
+++ b/index.html
@@ -237,6 +237,26 @@
             </div>
         </div>
 
+        <div class="row justify-content-md-center">
+            <div class="col-md-12 col-lg-10">
+                <br>
+                <h3>
+                    HM-EQA Dataset
+                </h3>
+                <p class="text-justify">
+                    While prior work has primarily considered synthetic scenes and simple questions such as “what is the color of the coffee table?” involving basic attributes of relatively large pieces of furniture, we are interested in applying our VLM-based framework in more realistic and diverse scenarios, where the question can be more open-ended and possibly require semantic reasoning. To this end, we propose <a href="//github.com/Stanford-ILIAD/active-eqa/tree/master/data">HM-EQA</a>, a new EQA dataset with 500 questions based on 312 scenes from the Habitat-Matterport 3D Research Dataset (HM3D). We consider five categories of questions:
+                    <!-- <br><p style="text-align:center;">
+                        <image src="img/trial.png" width="60%">
+                    </p> -->
+                    <br>1) Identification: asking about identifying the type of an object, e.g., “Which tablecloth is on the dining table? A) Red B) White C) Black D) Gray”
+                    <br>2) Countin: asking about the number of objects, e.g., “My friends and I were playing pool last night. Did we leave any cues on the table? A) None B) One C) Two D) Three”
+                    <br>3) Existence: asking if an object is present at a location, e.g., “Did I leave my jacket on the bench near the front door? A) Yes B) No”
+                    <br>4) State: asking about the state of an object, e.g., “Is the air conditioning in the living room turned on? A) Yes B) No” or “Is the curtain in the master bedroom closed? A) Yes B) No”
+                    <br>5) Location: asking about the location of an object, e.g., “Where have I left the black suitcase? A) At the corner of the bedroom B) In the hallway C) In the storage room D) Next to TV in the living room”
+            </div>
+            <br>
+        </div>
+
         <div class="row justify-content-md-center mt-4">
             <div class="col-md-10 col-lg-8">
                 <h3>Experiment Videos</h3>
